k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: swaggy-stacks
  labels:
    app.kubernetes.io/name: swaggy-stacks
    app.kubernetes.io/component: namespace
